[develop]
script_dir = $base/lib/johnny_5_base_driver

[install]
install_scripts = $base/lib/johnny_5_base_driver


[metadata]
name = johnny_5_base_driver
version = 0.0.0
description = Python motor driver for Johnny 5 tracked base
license = Apache-2.0

[options]
packages = find:
install_requires =
    rclpy
    lgpio

[options.entry_points]
console_scripts =
    base_driver = johnny_5_base_driver.base_driver:main

# ------------------------------------------------------------------
# 📦  Install non-Python data (our launch file) into the share tree.
# ------------------------------------------------------------------
[options.data_files]
share/${package_name}/launch =
    launch/base_bringup.launch.py